--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
@@ -4,7 +4,7 @@
 
     .search-input {
       width: 100%;
-      border: 1px solid $white;
+      border: 1px solid white;
       border-radius: 4px;
       padding: 5px;
     }
@@ -40,7 +40,7 @@
 
       .navbar-toggle {
         .icon-bar {
-          background-color: $white;
+          background-color: white;
         }
 
         &:hover {
@@ -63,10 +63,10 @@
   }
 
   .page-head__logo a {
-    color: $white !important;
+    color: white !important;
 
     &:hover {
-      color: $white;
+      color: white;
     }
   }
 
@@ -88,7 +88,7 @@
 
     .page-head__top-menu li a {
       padding: 10px 0;
-      color: $white;
+      color: white;
     }
 
     .nav-level-2.open,
@@ -97,7 +97,7 @@
     }
 
     .nav-level-2.open .row-level-2 {
-      border-bottom: 1px solid rgba($white, 0.2);
+      border-bottom: 1px solid rgba(white, 0.2);
     }
 
     .nav-level-3 {
@@ -107,7 +107,7 @@
 
       &.open .row-level-3 {
         display: block;
-        border-bottom: 1px solid $medium-grey;
+        border-bottom: 1px solid $gray-300;
       }
     }
   }
@@ -169,7 +169,7 @@
     word-wrap: break-word;
 
     .banner-description {
-      color: $white;
+      color: white;
     }
   }
 
