--- a/themes/openy_themes/openy_carnation/src/scss/modules/_events.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_events.scss
@@ -67,7 +67,7 @@
       font-size: 20px;
       font-weight: bold;
       letter-spacing: -0.5px;
-      color: #2f2f2f;
+      color: $gray-700;
       text-transform: uppercase;
 
       &:hover {
