--- a/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #2f2f2f;
+  background-color: $gray-700;
   color: #fff;
   font-size: 18px;
   padding-bottom: 0;
@@ -67,7 +67,7 @@
         padding: 0;
 
         a {
-          color: $white;
+          color: white;
         }
       }
     }
@@ -113,7 +113,7 @@
       transition: all 0.3s linear 0s;
 
       &:before {
-        color: $white;
+        color: white;
       }
     }
 
@@ -142,10 +142,10 @@
           a {
             font-size: 15px;
             padding: 0;
-            color: $white;
+            color: white;
 
             &:hover {
-              color: $white;
+              color: white;
               background: none;
               text-decoration: underline !important;
             }
