--- a/themes/openy_themes/openy_carnation/src/scss/modules/_grid_col.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_grid_col.scss
@@ -1,6 +1,6 @@
 .paragraph--column-in-a-grid {
   .col-xs-12:first-child h2 {
-    color: $yet-another-green;
+    color: $cyan;
   }
 
   .col-xs-12:nth-child(2) {
