--- a/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
@@ -97,7 +97,7 @@ body.with-banner .layout-container .top-navs {
 }
 
 body.with-banner .layout-container .top-navs.affix {
-  background-color: #2f2f2f;
+  background-color: $gray-700;
 }
 
 .page-head__top-menu {
