--- a/themes/openy_themes/openy_carnation/src/scss/_overrides.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_overrides.scss
@@ -1,23 +1,3 @@
-// @todo these should be their own CSS files and only included when
-// specific Drupal libraries are used.
-@import "component/ajax";
-@import "component/alert";
-@import "component/field";
-@import "component/file";
-@import "component/filter";
-@import "component/form";
-@import "component/icon";
-@import "component/navbar";
-@import "component/node";
-@import "component/panel";
-@import "component/progress-bar";
-@import "component/table-drag";
-@import "component/tabs";
-@import "component/toolbar";
-
-// jQuery UI style overrides.
-@import "jquery-ui/autocomplete";
-
 ol, ul {
   padding-left: 1.5em;
 
@@ -36,7 +16,7 @@ ol, ul {
   margin-top: 45px;
   padding-top: 35px;
   padding-bottom: 36px;
-  border-top: 1px solid #E5E5E5;
+  border-top: 1px solid #e5e5e5;
 }
 
 // Paragraphs.
@@ -49,7 +29,7 @@ p:last-child,
 // Help region.
 .region-help {
   > .glyphicon {
-    font-size: $font-size-large;
+    font-size: $font-size-lg;
     float: left;
     margin: -0.05em 0.5em 0 0;
   }
@@ -60,7 +40,7 @@ p:last-child,
 }
 
 .help-block, .control-group .help-inline {
-  color: $gray-light;
+  color: $gray-200;
   font-size: 12px;
   margin: 5px 0 10px;
   padding: 0;
@@ -68,4 +48,11 @@ p:last-child,
   &:first-child {
     margin-top: 0;
   }
+}
+
+// Media fix for BS.
+.media-image.media,
+.media--type-video.media,
+.media--type-video-upload.media {
+  display: block;
 }
