--- a/themes/openy_themes/openy_carnation/src/scss/base/_typography.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
   @include verdana();
-  color: $default-grey;
+  color: $gray-400;
   font-size: 18px;
 }
 
@@ -8,43 +8,45 @@ h1, .h1, h2, .h2, h3, h4, h5, h6 {
   @include verdana();
 }
 
-h1, .h1, h1.node-title {
+h1,
+.h1,
+h1.node-title {
   font-size: 50px;  
   font-weight: 500;
   letter-spacing: -2px;
-  color: #2F2F2F;
+  color: $gray-700;
   text-transform: uppercase;
 }
 
 h2,
 .h2 {
- font-size: 40px;
- font-weight: 500;
- letter-spacing: -2px;
- color: #2F2F2F;
+  font-size: 40px;
+  font-weight: 500;
+  letter-spacing: -2px;
+  color: $gray-700;
 }
 
 h3, #membership-calc-wrapper legend {
- font-size: 30px;
- letter-spacing: -0.5px;
+  font-size: 30px;
+  letter-spacing: -0.5px;
 }
 
 h4 {
- font-size: 24px;
- letter-spacing: -0.5px;
- color: $default-grey;
+  font-size: 24px;
+  letter-spacing: -0.5px;
+  color: $gray-400;
 }
 
 h5 {
- font-size: 20px;
- font-weight: bold;
- letter-spacing: -0.5px;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: -0.5px;
 }
 
 h6,
 .h6 {
- font-size: 20px;
- font-weight: bold;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 p {
