--- a/themes/openy_themes/openy_carnation/src/scss/component/_filter.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/component/_filter.scss
@@ -4,15 +4,14 @@
 
 // Mimic .panel-default styling.
 .filter-wrapper {
-  background-color: $panel-bg;
-  border: 1px solid $panel-default-border;
+  background-color: $white;
+  border: 1px solid $gray-300;
   border-top: 0;
-  border-radius: 0 0 $panel-border-radius $panel-border-radius;
-  box-shadow: 0 1px 1px rgba(0,0,0,.05);
+  border-radius: 0 0 $border-radius $border-radius;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
   margin-bottom: 0;
   padding: 10px;
   height: 51px;
-  @extend .clearfix;
 }
 
 .filter-help {
