--- a/themes/openy_themes/openy_carnation/src/scss/component/_tabs.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/component/_tabs.scss
@@ -23,8 +23,8 @@
     border-bottom: 0;
 
     .summary {
-      color: $nav-disabled-link-color;
-      font-size: $font-size-small;
+      color: $nav-link-disabled-color;
+      font-size: $font-size-sm;
     }
   }
 }
@@ -47,7 +47,7 @@
       margin-bottom: 0;
 
       > a {
-        border-radius: 0 0 $border-radius-base $border-radius-base;
+        border-radius: 0 0 $border-radius $border-radius;
 
         &:hover,
         &:focus {
@@ -93,7 +93,7 @@
   }
 
   > .tab-content {
-    border-radius: 0 $border-radius-base $border-radius-base $border-radius-base;
+    border-radius: 0 $border-radius $border-radius $border-radius;
     border: 1px solid $nav-tabs-border-color;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
     overflow: hidden;
@@ -108,7 +108,7 @@
     margin-right: -1px;
 
     > li > a {
-      border-radius: $border-radius-base 0 0 $border-radius-base;
+      border-radius: $border-radius 0 0 $border-radius;
 
       &:hover,
       &:focus {
@@ -132,7 +132,7 @@
     margin-left: -1px;
 
     > li > a {
-      border-radius: 0 $border-radius-base $border-radius-base 0;
+      border-radius: 0 $border-radius $border-radius 0;
 
       &:hover,
       &:focus {
