--- a/themes/openy_themes/openy_carnation/src/scss/jquery-ui/_autocomplete.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/jquery-ui/_autocomplete.scss
@@ -8,9 +8,8 @@
 .ui-autocomplete {
   background: $dropdown-bg;
   background-clip: padding-box;
-  border: 1px solid $dropdown-fallback-border;
-  border: 1px solid $dropdown-border;
-  border-radius: $border-radius-base;
+  border: 1px solid $dropdown-border-color;
+  border-radius: $border-radius;
   box-shadow: 0 6px 12px rgba(0,0,0,.175);
   color: inherit;
   font-family: $font-family-base;
