--- a/themes/openy_themes/openy_carnation/src/scss/modules/_banner.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_banner.scss
@@ -17,7 +17,7 @@
     line-height: normal;
     font-weight: bold;
     letter-spacing: -1.5px;
-    color: $white;
+    color: white;
     text-transform: uppercase;
     margin-bottom: 35px;
   }
@@ -33,6 +33,6 @@
   }
 
   .btn-transparent a {
-    color: $white;
+    color: white;
   }
 }
