--- a/themes/openy_themes/openy_carnation/src/scss/modules/_gallery.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_gallery.scss
@@ -28,7 +28,7 @@
       .fa {
         line-height: 105px;
         font-size: 25px;
-        color: $white;
+        color: white;
       }
     }
 
